--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 <body>
 <%= render 'layouts/nav' %>
 <div class="container">
+  <snap class="notice"><%= notice %></snap>
+  <snap class="alert"><%= alert %></snap>
 <%= yield %>
 </div>
 </body>
