--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -19,27 +19,27 @@
         </div>
     </div>
      <div class="col-xs-6">
+       <%= render '/components/post_form' %>
+    <% for @p in @posts %>
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>tweets</p>
+                <p><%= @p.content %></p>
             </div>
         </div>
+    <% end %>
     </div>
+
      <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-body">
                 <p>who to follow</p>
             </div>
         </div>
-    </div>   
-</div>
-
-<div class="row">
-         <div class="col-xs-3 col-xs-offset-9">
         <div class="panel panel-default">
             <div class="panel-body">
                 <p>trends</p>
             </div>
         </div>
-    
+    </div>   
 </div>
+
