--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,13 +5,20 @@
                 <p>stats</p>
             </div>
         </div>
-    </div>
-     <div class="col-xs-6">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>feed</p>
+                <p>trends</p>
             </div>
         </div>
+    </div>
+     <div class="col-xs-6">
+    <% for @p in @posts %>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <p><%= @p.content %></p>
+            </div>
+        </div>
+    <% end %>
     </div>
      <div class="col-xs-3">
         <div class="panel panel-default">
@@ -22,13 +29,4 @@
     </div>   
 </div>
 
-<div class="row">
-         <div class="col-xs-3">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <p>trends</p>
-            </div>
-        </div>
-    
-</div>
 
