--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,11 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+body {
+    background-color: rgba(212, 216, 212, 0.25);
+}
+
+.navbar {
+    background-color: white;
+}
