--- a/app/views/layouts/_nav_user.html.erb
+++ b/app/views/layouts/_nav_user.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Railster</a>
+      <img class="navbar-brand" src="rt.png">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,13 +18,13 @@
         <li><a href="/explore">Explore</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li>
                 <form class="navbar-form navbar-right">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search Railster">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
       </form>
-        <li><a href="#">Tweet</a></li>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %><span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -36,6 +36,7 @@
             <li role="separator" class="divider"></li>
             <li><%= link_to('Log out', destroy_user_session_path, :method => :delete) %></li>
           </ul>
+            <li type="button" class="btn btn-primary navbar-btn">Add Post</li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
