--- a/app/views/components/_post_form.html.erb
+++ b/app/views/components/_post_form.html.erb
@@ -7,7 +7,7 @@
                   <%= form_for(@newPost) do |f| %>
                     <div class="field" style="margin-left: 10px;">
                       <%= f.text_field :content, autofocus: true, class: "form-control" %>
-                      <span type="button" style="float: right; margin-top: 5px;"><%= f.submit "Add post", class: "btn btn-primary"%></span>
+                      <span type="button" style="float: right; margin-top: 5px;"><%= f.submit "Dodaj post", class: "btn btn-primary"%></span>
                     </div>
                     
                   <% end %>
