--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,12 @@
     <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>stats</p>
+                <p>statystyki</p>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>trends</p>
+                <p>trendy</p>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
                     <span class="glyphicon glyphicon-retweet g-links" aria-hidden="true"></span>
                     <span class="glyphicon glyphicon-heart g-links" aria-hidden="true"></span>
                     <span class="glyphicon glyphicon-option-horizontal g-links" aria-hidden="true"></span>
-                    <a href="">View conversation</a>
+                    <a href="">Zobacz konwersację</a>
                     </p>
                 </div>
               
@@ -43,7 +43,7 @@
             <div class="panel-body row">
                 <div class="col-sm-12">
                     <center><img src="/rt.png" height="25px" width="25px"></img></center>
-                <center><a href="#top"><p class="opacity: .7; color: grey;">Go to Top <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></p></a></center>
+                <center><a href="#top"><p class="opacity: .7; color: grey;">Idź do góry<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></p></a></center>
                 </div>
               
             </div>
@@ -53,8 +53,15 @@
      <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p style="opacity: 0.7;">Connect with your buddies. Chat With New Friends. Share your adventures.
-                Just like a blog, but with less characters!</p>
+                <p style="opacity: 0.7;">
+                Railster jest mikroblogiem stworzonym <br>
+                w frameworku Ruby On Rails <br>
+                Połącz się ze swoimi znajomymi. <br>
+                Rozmawiaj z nowymi przyjaciółmi. <br>
+                Podziel się swoimi przygodami. <br>
+                To zupełnie jak blog, <br>
+                ale z mniejszą ilością znaków! <br>
+                </p>
             </div>
         </div>
     </div>   
