--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -14,7 +14,7 @@
     <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>profile</p>
+                <p>Profil</p>
             </div>
         </div>
     </div>
@@ -32,12 +32,12 @@
      <div class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>who to follow</p>
+                <p>Kogo followować</p>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>trends</p>
+                <p>Trendy</p>
             </div>
         </div>
     </div>   
